# spa-ssr-reasonml-native

./: .gitignore  Makefile  dune-project  package.json  spa-ssr-reasonml-native.opam  webpack.config.js
assets/: index.html
public/: index.css  index.html
src/client/: Routes_handler.re  Routes_home.re  Routes_otherPage.re  Routes_pokemon.re  app.re  dune
src/server/: Routes_build.re  Routes_home.re  Routes_otherPage.re  Routes_pokemon.re  dune  server.re
src/shared/: Layout.re  Loader.re  Pages_Home.re  Pages_OtherPage.re  Pages_Pokemon.re  TopBar.re
src/shared/native/: dune
