opam-version: "2.0"
maintainer: ["Pedro B S Lisboa <pedrobslisboa@gmail.com>"]
authors: ["Pedro B S Lisboa <pedrobslisboa@gmail.com>"]
license: "MIT"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "5.0.0"}
  "reason" {>= "3.10.0"}
  "melange" {= "2.1.0"}
  "melange-fetch"
  "melange-json" {= "1.0.0"}
  "dream"
  "lambdasoup"
  "reason-react" {>= "0.13.0"}
  "cohttp-lwt-unix" {>= "5.3.1"}
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "fmt" {with-test}
  "ocamlformat" {= "0.26.1" & with-test}
  "melange-testing-library" {with-test}
  "melange-jest" {with-test}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
  "lwt" {>= "5.7.0"}

]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/pedrobslisboa/pitaya.git"
