(include_subdirs unqualified)

(library
 (name shared_native_demo)
 (modules :standard)
 (libraries
  universal-portal.shared_native
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.webapi)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.melange_ppx
   server-reason-react.browser_ppx)))

(copy_files# "../*.re")
